@@ -1,3 +1,8 @@
+Wed Mar  5 14:53:58 1997  Laurent Pautet  <pautet@inf.enst.fr>
+
+	* s-parint.adb: Changed Public_RPC_Receiver into
+ 	Public_Message_Receiver.
+
 Wed Mar  5 14:19:51 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* s-gartcp.adb: Added missing pragma Elaborate_All (new checks in
